// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`large test: exact mode applies major message 1`] = `
Object {
  "/changelog/2.0.0": Object {
    "operation": "add",
    "value": Object {
      "changes": Object {
        "four": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "BREAKING CHANGE: text ",
              "subject": "baz",
              "type": "fix",
            },
          ],
          "version": "5.0.0",
        },
        "one": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": undefined,
              "subject": "fix: baz",
              "type": "dependency update",
            },
          ],
          "version": "1.2.4",
        },
        "three": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": undefined,
              "subject": "fix: baz",
              "type": "dependency update",
            },
          ],
          "version": "3.4.6",
        },
        "two": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": "three",
              "subject": "fix: baz",
              "type": "dependency update",
            },
          ],
          "version": "2.3.5",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
  "/mainPackage/rlsr/determinedIncrementLevel": Object {
    "operation": "add",
    "value": 2,
  },
  "/mainPackage/version": Object {
    "operation": "update",
    "value": "2.0.0",
  },
  "/messages/0": Object {
    "operation": "delete",
  },
  "/packages/four/version": Object {
    "operation": "update",
    "value": "5.0.0",
  },
  "/packages/one/dependencies/four": Object {
    "operation": "update",
    "value": "5.0.0",
  },
  "/packages/one/version": Object {
    "operation": "update",
    "value": "1.2.4",
  },
  "/packages/three/dependencies/four": Object {
    "operation": "update",
    "value": "5.0.0",
  },
  "/packages/three/version": Object {
    "operation": "update",
    "value": "3.4.6",
  },
  "/packages/two/dependencies/three": Object {
    "operation": "update",
    "value": "3.4.6",
  },
  "/packages/two/version": Object {
    "operation": "update",
    "value": "2.3.5",
  },
}
`;

exports[`large test: exact mode applies messages with multiple affected packages 1`] = `
Object {
  "/changelog/1.9.0": Object {
    "operation": "add",
    "value": Object {
      "changes": Object {
        "one": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "subject": "waz",
              "type": "feat",
            },
          ],
          "version": "1.3.0",
        },
        "three": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "two",
                "three",
              ],
              "body": "
",
              "subject": "tar",
              "type": "fix",
            },
          ],
          "version": "3.4.6",
        },
        "two": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "two",
                "three",
              ],
              "body": "
",
              "subject": "tar",
              "type": "fix",
            },
            Object {
              "affected": Array [
                "two",
                "three",
              ],
              "body": "
",
              "source": undefined,
              "subject": "fix: tar",
              "type": "dependency update",
            },
          ],
          "version": "2.3.5",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
  "/mainPackage/rlsr/determinedIncrementLevel": Object {
    "operation": "add",
    "value": 1,
  },
  "/mainPackage/version": Object {
    "operation": "update",
    "value": "1.9.0",
  },
  "/messages/0": Object {
    "operation": "delete",
  },
  "/messages/1": Object {
    "operation": "delete",
  },
  "/packages/one/version": Object {
    "operation": "update",
    "value": "1.3.0",
  },
  "/packages/three/version": Object {
    "operation": "update",
    "value": "3.4.6",
  },
  "/packages/two/dependencies/three": Object {
    "operation": "update",
    "value": "3.4.6",
  },
  "/packages/two/version": Object {
    "operation": "update",
    "value": "2.3.5",
  },
}
`;

exports[`large test: exact mode applies minor message 1`] = `
Object {
  "/changelog/1.9.0": Object {
    "operation": "add",
    "value": Object {
      "changes": Object {
        "four": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "subject": "bar",
              "type": "feat",
            },
          ],
          "version": "4.6.0",
        },
        "one": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": undefined,
              "subject": "feat: bar",
              "type": "dependency update",
            },
          ],
          "version": "1.2.4",
        },
        "three": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": undefined,
              "subject": "feat: bar",
              "type": "dependency update",
            },
          ],
          "version": "3.4.6",
        },
        "two": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": "three",
              "subject": "feat: bar",
              "type": "dependency update",
            },
          ],
          "version": "2.3.5",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
  "/mainPackage/rlsr/determinedIncrementLevel": Object {
    "operation": "add",
    "value": 1,
  },
  "/mainPackage/version": Object {
    "operation": "update",
    "value": "1.9.0",
  },
  "/messages/0": Object {
    "operation": "delete",
  },
  "/packages/four/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/one/dependencies/four": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/one/version": Object {
    "operation": "update",
    "value": "1.2.4",
  },
  "/packages/three/dependencies/four": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/three/version": Object {
    "operation": "update",
    "value": "3.4.6",
  },
  "/packages/two/dependencies/three": Object {
    "operation": "update",
    "value": "3.4.6",
  },
  "/packages/two/version": Object {
    "operation": "update",
    "value": "2.3.5",
  },
}
`;

exports[`large test: exact mode applies patch message 1`] = `
Object {
  "/changelog/1.8.6": Object {
    "operation": "add",
    "value": Object {
      "changes": Object {
        "four": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "subject": "foo",
              "type": "fix",
            },
          ],
          "version": "4.5.7",
        },
        "one": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": undefined,
              "subject": "fix: foo",
              "type": "dependency update",
            },
          ],
          "version": "1.2.4",
        },
        "three": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": undefined,
              "subject": "fix: foo",
              "type": "dependency update",
            },
          ],
          "version": "3.4.6",
        },
        "two": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": "three",
              "subject": "fix: foo",
              "type": "dependency update",
            },
          ],
          "version": "2.3.5",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
  "/mainPackage/rlsr/determinedIncrementLevel": Object {
    "operation": "add",
    "value": 0,
  },
  "/mainPackage/version": Object {
    "operation": "update",
    "value": "1.8.6",
  },
  "/messages/0": Object {
    "operation": "delete",
  },
  "/packages/four/version": Object {
    "operation": "update",
    "value": "4.5.7",
  },
  "/packages/one/dependencies/four": Object {
    "operation": "update",
    "value": "4.5.7",
  },
  "/packages/one/version": Object {
    "operation": "update",
    "value": "1.2.4",
  },
  "/packages/three/dependencies/four": Object {
    "operation": "update",
    "value": "4.5.7",
  },
  "/packages/three/version": Object {
    "operation": "update",
    "value": "3.4.6",
  },
  "/packages/two/dependencies/three": Object {
    "operation": "update",
    "value": "3.4.6",
  },
  "/packages/two/version": Object {
    "operation": "update",
    "value": "2.3.5",
  },
}
`;

exports[`large test: exact mode applies several messages 1`] = `
Object {
  "/changelog/1.9.0": Object {
    "operation": "add",
    "value": Object {
      "changes": Object {
        "four": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "subject": "taz",
              "type": "feat",
            },
          ],
          "version": "4.6.0",
        },
        "one": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "subject": "raz",
              "type": "fix",
            },
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": undefined,
              "subject": "feat: taz",
              "type": "dependency update",
            },
          ],
          "version": "1.2.4",
        },
        "three": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "three",
              ],
              "body": "",
              "subject": "roo",
              "type": "fix",
            },
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": undefined,
              "subject": "feat: taz",
              "type": "dependency update",
            },
          ],
          "version": "3.4.6",
        },
        "two": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "three",
              ],
              "body": "",
              "source": undefined,
              "subject": "fix: roo",
              "type": "dependency update",
            },
            Object {
              "affected": Array [
                "three",
              ],
              "body": "",
              "source": undefined,
              "subject": "fix: roo",
              "type": "dependency update",
            },
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": "three",
              "subject": "feat: taz",
              "type": "dependency update",
            },
          ],
          "version": "2.3.5",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
  "/mainPackage/rlsr/determinedIncrementLevel": Object {
    "operation": "add",
    "value": 1,
  },
  "/mainPackage/version": Object {
    "operation": "update",
    "value": "1.9.0",
  },
  "/messages/0": Object {
    "operation": "delete",
  },
  "/messages/1": Object {
    "operation": "delete",
  },
  "/messages/2": Object {
    "operation": "delete",
  },
  "/packages/four/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/one/dependencies/four": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/one/version": Object {
    "operation": "update",
    "value": "1.2.4",
  },
  "/packages/three/dependencies/four": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/three/version": Object {
    "operation": "update",
    "value": "3.4.6",
  },
  "/packages/two/dependencies/three": Object {
    "operation": "update",
    "value": "3.4.6",
  },
  "/packages/two/version": Object {
    "operation": "update",
    "value": "2.3.5",
  },
}
`;
